# maintenance

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  test-requirements.txt
account_asset_maintenance/: README.rst  __manifest__.py
base_maintenance/: README.rst  __manifest__.py
base_maintenance_config/: README.rst  __init__.py  __manifest__.py  menuitems.xml
base_maintenance_group/: README.rst  __manifest__.py  menuitems.xml
maintenance_account/: README.rst  __manifest__.py
maintenance_checklist/: README.rst  __manifest__.py
maintenance_checklist_auto/: README.rst  __manifest__.py
maintenance_checklist_plan/: README.rst  __manifest__.py
maintenance_checklist_timer/: README.rst  __manifest__.py
maintenance_equipment_always_fold/: README.rst  __manifest__.py
maintenance_equipment_category_hierarchy/: README.rst  __manifest__.py
maintenance_equipment_category_kanban/: README.rst  __manifest__.py
maintenance_equipment_contract/: README.rst  __manifest__.py
maintenance_equipment_custom_info/: README.rst  __manifest__.py
maintenance_equipment_hierarchy/: README.rst  __manifest__.py
maintenance_equipment_image/: README.rst  __manifest__.py
maintenance_equipment_meter/: README.rst  __manifest__.py
maintenance_equipment_scrap/: README.rst  __init__.py  __manifest__.py
maintenance_equipment_sequence/: README.rst  __manifest__.py
maintenance_equipment_status/: README.rst  __manifest__.py
maintenance_equipment_tags/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+801 files in other folders)
