[project]
name = "odoo-addons-oca-maintenance"
version = "17.0.20240723.0"
dependencies = [
    "odoo-addon-maintenance_account>=17.0dev,<17.1dev",
    "odoo-addon-maintenance_equipment_hierarchy>=17.0dev,<17.1dev",
    "odoo-addon-maintenance_product>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
